fix bug: fix mention area z-index bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1701,7 +1701,7 @@ ul.users li a div.username span {
   margin-top: 20px;
   margin-left: 20px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  z-index: 999;
+  z-index: 10009;
   background-color: #fff;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
 }
